--- a/src/main/resources/templates/fragments/dashboard/employee-management.html
+++ b/src/main/resources/templates/fragments/dashboard/employee-management.html
@@ -31,8 +31,11 @@
         <i class="bi bi-person-plus"></i>
         Add Employee
       </button>
-      <a th:href="@{/employees/update}" class="btn btn-primary">
+      <!-- <a th:href="@{/employees/update}" class="btn btn-primary">
         <i class="fas fa-edit me-2"></i>Update
+      </a> -->
+      <a th:href="@{/students}" class="btn btn-primary">
+        <i class="fas fa-edit me-2"></i>Update Student
       </a>
     </div>
   </div>
