--- a/src/main/resources/templates/admin-dashboard.html
+++ b/src/main/resources/templates/admin-dashboard.html
@@ -332,7 +332,7 @@
             <td th:text="${student.paymentDueDate}"></td>
             <td th:text="${student.paymentDate}"></td>
             <td>
-              <a th:href="@{'/students/update/' + ${student.id}}" class="action-icon update" title="編集">
+              <a th:href="@{'/students/student-update/' + ${student.id}}" class="action-icon update" title="編集">
                 <i class="bi bi-pencil-square"></i>
               </a>
               <a th:href="@{'/students/detail/' + ${student.id}}" class="action-icon detail" title="明細">
